# libMaze

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  commandnames.h  compiler.cpp  compiler.h  direction.h  floodinfo.h  libMaze-usage.md  maze.cpp  maze.h  mazeconstants.h  mazedata.cpp  mazedata.h  mazefiler.cpp  mazefiler.h  mazepathfinder.cpp  mazepathfinder.h  mazeprinter.cpp  mazeprinter.h  mazesearcher.cpp  mazesearcher.h  priorityqueue.h  util.h
docs/: review.md
tests/: 00-test-blank.cpp  01-direction.cpp  02-priority-queue.cpp  03-maze-16-tests.cpp  04-direction-to-smallest-test.cpp  05-util.cpp  06-compiler.cpp  07-maze-extended.cpp  08-mazeprinter.cpp  09-mazefiler.cpp  10-pathfinder.cpp  11-mazesearcher.cpp  CMakeLists.txt  path-test-data.cpp
